2009-02-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.90 release

2009-01-22	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* getinvolved.html:
	Updated information on how to install a module

2009-01-19	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.5 release

2009-01-12	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.24.3 release

2009-01-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.4 release

2008-12-15	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.3 release

2008-12-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.2 release

2008-11-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* screenshots.html
	* getinvolved.html
	* download.html
	* index.html:
	Updated URL to GNOME projects listing

2008-11-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* deskbar/images/icons
	* deskbar/images/Makefile.am
	* getinvolved.html
	* Makefile.am
	* new-style_modules.html:
	Added guide "Writing new-style modules for Deskbar-Applet"

2008-11-22	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.24.2 release

2008-11-03	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.1 release

2008-09-22	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.24.0 release

2008-09-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.92 release

2008-09-01	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.91 release

2008-08-18	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.90 release

2008-08-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.6 release

2008-08-03	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html: