@@ -111,12 +111,22 @@
       <!-- <p>There is currently no separate development release.</p> -->
       
       <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.90.tar.gz"
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.92.tar.gz"
       title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Deskbar-Applet 2.25.92</a></div>
+    
+    <h3>Past releases</h3>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.91.tar.gz">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Deskbar-Applet 2.25.91</a></div>
+    
+      <div class="download">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.90.tar.gz">
       <img src="./images/package-x-generic.png" alt="source package" />
       Deskbar-Applet 2.25.90</a></div>
     
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.5.tar.gz">
       <img src="./images/package-x-generic.png" alt="source package" />
