@@ -90,6 +90,25 @@
         <div id="news">
 	    <h2 class="">News</h2>
 	    
+	    <h3>March 2, 2009</h3>
+	      <b>Unstable</b> version 2.25.92 released.<br />
+	      <ul>
+	      <li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=572291">#572291</a>, Bookmark search doesn't match on Epiphany topics</li>
+	      </ul>
+	      <a href="download.html">Download it</a>
+	    
+	    <h3>February 16, 2009</h3>
+	      <b>Unstable</b> version 2.25.91 released.<br />
+	      <ul>
+	      <li>Fixed bug that only local GTK bookmarks showed up.</li>
+		  <li>Searching for bookmark name is case insensitive now.</li>
+          <li>Check if there's an default application to open the url in ShowUrlAction.is_valid</li>
+          <li>Fixed bug that first and last category where not selectable with keyboard</li>
+          <li>Select last item when Enter is pressed in entry when the applet is on the bottom panel</li>
+          <li>Set correct sort order of CuemiacTreeView at startup</li>
+	      </ul>
+	      <a href="download.html">Download it</a>
+	    
 	    <h3>February 2, 2009</h3>
 	      <b>Unstable</b> version 2.25.90 released.<br />
 	      <ul>
