@@ -1,3 +1,9 @@
+2009-03-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.25.91 and 2.25.92 release
+
 2009-02-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
